--- a/Snackapp/app/src/main/AndroidManifest.xml
+++ b/Snackapp/app/src/main/AndroidManifest.xml
@@ -5,14 +5,8 @@
     <uses-sdk
         android:minSdkVersion="21"
         android:targetSdkVersion="21" />
-
-    <android:uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
-    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <android:uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.LOCATION_HARDWARE"/>
 
     <application
         android:allowBackup="true"
@@ -58,6 +52,16 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+    <activity
+        android:name=".MapPane"
+        android:label="Map">
+        <intent-filter>
+            <action android:name="com.example.map_activity" />
+
+            <category android:name="android.intent.category.app_maps" />
+        </intent-filter>
+    </activity>
+
 
     </application>
 
