--- a/Snackapp/app/src/main/AndroidManifest.xml
+++ b/Snackapp/app/src/main/AndroidManifest.xml
@@ -3,16 +3,31 @@
     package="com.example.gebruiker.snackapp" >
 
     <uses-sdk
-        android:minSdkVersion="21"
+        android:minSdkVersion="14"
         android:targetSdkVersion="21" />
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.LOCATION_HARDWARE"/>
+    <uses-permission android:name="android.permission.LOCATION_HARDWARE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="SnackApp"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="com.google.android.maps"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -22,7 +37,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".snackbar_layout"
             android:label="Snackbar" >
@@ -32,7 +46,6 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".turks_layout"
             android:label="Turk" >
@@ -42,7 +55,6 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".italiaans_layout"
             android:label="Italiaans" >
@@ -52,16 +64,22 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-    <activity
-        android:name=".MapPane"
-        android:label="Map">
-        <intent-filter>
-            <action android:name="com.example.map_activity" />
+        <activity
+            android:name=".MapPane"
+            android:label="Map" >
+            <intent-filter>
+                <action android:name="com.example.map_activity" />
 
-            <category android:name="android.intent.category.app_maps" />
-        </intent-filter>
-    </activity>
+                <category android:name="android.intent.category.app_maps" />
+            </intent-filter>
+        </activity>
 
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_key" />
 
     </application>
 
