--- a/Snackapp/local.properties
+++ b/Snackapp/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 02 12:40:03 CEST 2015
-sdk.dir=C\:\\Users\\Chris\\AppData\\Local\\Android\\sdk
+#Mon Jun 22 11:04:15 CEST 2015
+sdk.dir=C\:\\Users\\Gebruiker\\AppData\\Local\\Android\\sdk
