--- a/Snackapp/app/build.gradle
+++ b/Snackapp/app/build.gradle
@@ -31,6 +31,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.+'
 }
 dependencies {
+    compile 'com.google.android.gms:play-services:4.2.42'
+    compile 'com.android.support:appcompat-v7:21.+'
+}
+dependencies {
     compile 'com.google.android.gms:play-services-maps:7.5.0'
     compile 'com.google.android.gms:play-services-location:7.5.0'
     compile 'com.google.android.gms:play-services:7.5.0'
