--- a/Snackapp/app/src/main/AndroidManifest.xml
+++ b/Snackapp/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
     <android:uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
-    <android:uses-permission
-        android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <android:uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
@@ -28,7 +27,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="SnackApp"
         android:theme="@style/AppTheme" >
-        <uses-library android:name="com.google.android.maps"/>
+        <uses-library android:name="com.google.android.maps" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -40,7 +40,7 @@
         </activity>
         <activity
             android:name=".snackbar_layout"
-            android:label="Snackbar" >
+            android:label="SnackApp - Snackbar" >
             <intent-filter>
                 <action android:name="com.example.snackbar_layout" />
 
@@ -49,7 +49,7 @@
         </activity>
         <activity
             android:name=".turks_layout"
-            android:label="Turk" >
+            android:label="SnackApp - Turks" >
             <intent-filter>
                 <action android:name="com.example.turks_layout" />
 
@@ -57,17 +57,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".italiaans_layout"
-            android:label="Italiaans" >
+            android:name=".MapPane"
+            android:label="SnackApp - Route" >
             <intent-filter>
-                <action android:name="com.example.italiaans_layout" />
+                <action android:name="com.example.map_activity" />
 
-                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.app_maps" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".MapPane"
-            android:label="Map" >
+            android:name=".AllLocations"
+            android:label="SnackApp - Overzicht" >
             <intent-filter>
                 <action android:name="com.example.map_activity" />
 
@@ -81,7 +81,5 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
-
     </application>
-
 </manifest>
