--- a/Snackapp/local.properties
+++ b/Snackapp/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 23 17:20:30 CEST 2015
-sdk.dir=C\:\\Users\\remkoe\\AppData\\Local\\Android\\sdk
+#Tue Jun 23 19:54:18 CEST 2015
+sdk.dir=C\:\\Users\\Gebruiker\\AppData\\Local\\Android\\sdk
