--- a/Snackapp/local.properties
+++ b/Snackapp/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 23 22:36:09 CEST 2015
-sdk.dir=C\:\\Users\\remkoe\\AppData\\Local\\Android\\sdk
+#Wed Jun 24 00:08:23 CEST 2015
+sdk.dir=C\:\\Users\\Gebruiker\\AppData\\Local\\Android\\sdk
